# agent_property_management_framework

./: .gitignore  AGENTS.md  AGENT_CONTEXT.md  AGENT_SETUP.md  DASHBOARD.md  DECISIONS.md  IMPROVEMENTS.md  PRODUCT_DEFINITION.md  README.md  START.bat  START.command  START.sh  TASKS.md  setup.sh
.claude/: CLAUDE.md
docs/: faq.md  (+12 more)
webapp/: pyproject.toml  pytest.ini  requirements.txt  startup.sh
webapp/app/: __init__.py  __main__.py  config.py  main.py
webapp/app/routers/: dashboard.py  files.py  onboarding.py  search.py  server.py  settings.py  tasks.py
webapp/app/services/: config_svc.py  dashboard_svc.py  filesystem.py  markdown_svc.py  onboarding_svc.py  search_svc.py
webapp/app/static/: manifest.json  offline.html  sw.js
webapp/app/static/css/: style.css
webapp/app/static/js/: app.js
webapp/app/templates/: 404.html  base.html  dashboard.html  file_edit.html  file_view.html  preview.html  search_results.html  server_stopped.html  settings.html
webapp/app/templates/components/: file_tree_macros.html  file_tree_node.html  search_input.html  sidebar.html  toast.html
webapp/tests/: __init__.py  conftest.py
webapp/tests/acceptance/: __init__.py  test_f1_startup.py  test_f2_file_tree.py  test_f3_editor.py  test_f4_checkboxes.py  test_f5_dashboard.py  test_f6_search.py
webapp/tests/integration/: __init__.py  test_dashboard_routes.py  test_file_routes.py  test_search_routes.py  test_server_routes.py  test_task_routes.py
webapp/tests/unit/: __init__.py  test_config.py  test_dashboard_svc.py  test_filesystem.py  test_markdown_svc.py  test_search_svc.py
(+84 files in other folders)
